--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-ad973daa3e120eaa5b27.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-327f9d73892a3f9fb719.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-6e24e9371160036293e9.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-efaa199269f57674bdf2.js\"],\"component---src-pages-404-tsx\":[\"/component---src-pages-404-tsx-327f9d73892a3f9fb719.js\"],\"component---src-pages-index-tsx\":[\"/component---src-pages-index-tsx-b9c208bf61b1dd18dc1e.js\"],\"component---src-pages-people-tsx\":[\"/component---src-pages-people-tsx-089aa16fb0831a040ede.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="4f10ee30af4569172acf";</script><script src="/webpack-runtime-b05fafee813724809f5e.js" async></script><script src="/framework-f01bc1dde5d501ba4f04.js" async></script><script src="/app-ad973daa3e120eaa5b27.js" async></script>
+        <script>window.___webpackCompilationHash="14e38db4b391cd4d1d8e";</script><script src="/webpack-runtime-21a3bb7cec08afebd70d.js" async></script><script src="/framework-f01bc1dde5d501ba4f04.js" async></script><script src="/app-efaa199269f57674bdf2.js" async></script>
